--- a/app/views/provide/items/_form.html.haml
+++ b/app/views/provide/items/_form.html.haml
@@ -2,7 +2,7 @@
   - if notification = f.error_notification
     = notification
 
-  = f.input :stock
+  = f.input :add_stock_num, as: :integer
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
