--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -7,7 +7,7 @@
   - @items.each do |item|
     %tr
       - if item.image.present?
-        %td.thmb-image-col= image_tag item.image.normal
+        %td.thumb-image-col= image_tag item.image.normal
       - else
         %td.thumb-image-col= image_tag 'http://placehold.it/100&text=NoImage'
       %td
