--- a/app/views/admin/user_point_logs/_form.html.haml
+++ b/app/views/admin/user_point_logs/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @user_point_log], html: { class: 'form-horizontal' } do |f|
+= simple_form_for [:admin, @user, @user_point_log], html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = f.error_notification
 
