--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,6 +1,6 @@
 - @page_title = t('.title')
 
-= simple_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal col-sm-10' } do |f|
+= simple_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal' } do |f|
   = f.error_notification
   = f.input :reset_password_token, as: :hidden
   = f.full_error :reset_password_token
@@ -8,4 +8,4 @@
   = f.input :password_confirmation, required: true
 
   .form-actions
-    = f.button :submit, t('.submit_button'), class: 'btn btn-lg btn-primary btn-block'
+    = f.button :submit, t('.submit_button'), class: 'btn btn-lg btn-primary'
