--- a/app/views/diaries/_good.html.haml
+++ b/app/views/diaries/_good.html.haml
@@ -1,4 +1,5 @@
-- if current_user and current_user.voted_as_when_voted_for diary
+- if !current_user or current_user.voted_as_when_voted_for diary
+  %i.glyphicon.glyphicon-thumbs-up
   = t('.good_button')
 - else
   = link_to good_diary_path(diary), remote: true do
