--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -12,6 +12,8 @@
   = f.input :password, autocomplete: 'off', required: false
   = f.input :password_confirmation, required: false
   = f.input :current_password, required: true
+  = f.input :nick_name
+
   .form-actions
     = f.button :submit, t('.submit_button'), class: 'btn btn-lg btn-primary'
 
