--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,6 +4,7 @@
   = f.input :email, :required => true, :autofocus => true
   = f.input :password, :required => true
   = f.input :password_confirmation, :required => true
+  = f.input :nick_name
 
   .form-actions
     = f.button :submit, t('.submit_button'), class: 'btn btn-primary'
