--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,6 +13,7 @@
   = f.input :password_confirmation, required: false
   = f.input :current_password, required: true
   = f.input :nick_name
+  = f.input :profile_image
 
   .form-actions
     = f.button :submit, t('.submit_button'), class: 'btn btn-lg btn-primary'
