--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,6 +5,7 @@
   = f.input :password, :required => true
   = f.input :password_confirmation, :required => true
   = f.input :nick_name
+  = f.input :profile_image
 
   .form-actions
     = f.button :submit, t('.submit_button'), class: 'btn btn-primary'
