--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,10 @@
           = link_to t('site_titles.user'), root_path, class: 'navbar-brand'
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
+            %li{ class: controller.controller_name == 'diaries' ? 'active' : '' }
+              = link_to Diary.model_name.human, diaries_path
+            %li{ class: controller.controller_name == 'items' ? 'active' : '' }
+              = link_to Item.model_name.human, items_path
           %ul.nav.navbar-nav.navbar-right
             - if admin_user_signed_in?
               %li
@@ -20,8 +24,6 @@
               %li
                 = link_to t('site_titles.provide'), provide_root_path
             - if user_signed_in?
-              %li
-                = link_to t('helpers.actions.change_user_info'), edit_user_registration_path
               %li
                 = link_to t('helpers.actions.logout'), destroy_user_session_path, method: :delete
             - else
@@ -32,7 +34,20 @@
     .cotainer-fluid
       .row.contents-wrapper
         #sideber.col-sm-3.col-md-2.sidebar
-          %ul.nav.nav-sidebar
+          - if user_signed_in?
+            .user-profile
+              .profile-image
+                - if current_user.profile_image.present?
+                  = image_tag current_user.profile_image.thumb
+                - else
+                  = image_tag 'http://placehold.it/120&text=NoImage'
+              .nick-name
+                %strong= current_user.nick_name
+              .user-actions
+                %div
+                  = link_to t('user_actions.change_registation'), edit_user_registration_path
+                %div
+                  = link_to t('user_actions.change_destination'), edit_users_distination_path
         #main.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           - if notice or alert
             .notify-block
