--- a/app/views/cart_items/_form.html.haml
+++ b/app/views/cart_items/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @cart_item, url: cart_items_path, html: { class: 'form-horizontal' } do |f|
+= simple_form_for @cart_item, url: cart_item_path, html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = notification
 
