--- a/app/views/cart_items/index.html.haml
+++ b/app/views/cart_items/index.html.haml
@@ -22,11 +22,11 @@
       %td= cart_item.item.name
       %td= number_to_human(cart_item.quantity, units: 'number.human.quantity_units.units')
       %td.action-col
-        = link_to add_cart_items_path(cart_item.item), class: 'btn btn-default btn-xs' do
+        = link_to add_cart_item_path(cart_item.item), class: 'btn btn-default btn-xs' do
           %i.glyphicon.glyphicon-edit
           = t('helpers.actions.edit')
       %td.action-col
-        = link_to cart_items_path(cart_item.item), method: :delete, data: { confirm: t('helpers.confirm.delete') }, class: 'btn btn-danger btn-xs btn-white' do
+        = link_to cart_item_path(cart_item.item), method: :delete, data: { confirm: t('helpers.confirm.delete') }, class: 'btn btn-danger btn-xs btn-white' do
           %i.glyphicon.glyphicon-trash
           = t('helpers.actions.destroy')
 
