--- a/app/views/diary_notifier/add_good.text.haml
+++ b/app/views/diary_notifier/add_good.text.haml
@@ -1,4 +1,4 @@
 = t('.information_message', title: @diary.title)
 
-= link_to @diary, t('.detail_link')
+= link_to diary_url(@diary), t('.detail_link')
 
