--- a/app/views/cart_items/index.html.haml
+++ b/app/views/cart_items/index.html.haml
@@ -9,7 +9,9 @@
   %tr
     %th.thumb-image-col
     %th= Item.human_attribute_name(:name)
+    %th= Item.human_attribute_name(:price)
     %th= CartItem.human_attribute_name(:quantity)
+    %th= t('.subtotal')
     %th.action-col
     %th.action-col
 
@@ -20,7 +22,9 @@
       - else
         %td.thumb-image-col= image_tag 'http://placehold.it/50&text=NoImage'
       %td= cart_item.item.name
+      %td= number_to_currency(cart_item.item.price)
       %td= number_to_human(cart_item.quantity, units: 'number.human.quantity_units.units')
+      %td= number_to_currency(cart_item.subtotal)
       %td.action-col
         = link_to add_cart_item_path(cart_item.item), class: 'btn btn-default btn-xs' do
           %i.glyphicon.glyphicon-edit
@@ -29,6 +33,9 @@
         = link_to cart_item_path(cart_item.item), method: :delete, data: { confirm: t('helpers.confirm.delete') }, class: 'btn btn-danger btn-xs btn-white' do
           %i.glyphicon.glyphicon-trash
           = t('helpers.actions.destroy')
+  %tr.success
+    %th{ colspan: 4 }= t('.total')
+    %td{ colspan: 3 }= number_to_currency(@cart_items.sum(&:subtotal))
 
 = paginate @cart_items
 
