--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,6 +52,8 @@
                   = link_to t('user_actions.change_destination'), edit_users_distination_path
                 %div
                   = link_to t('user_actions.user_point_log'), user_point_logs_path
+                %div
+                  = link_to t('user_actions.order'), orders_path
         #main.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           - if notice or alert
             .notify-block
