--- a/app/views/provide/items/_form.html.haml
+++ b/app/views/provide/items/_form.html.haml
@@ -1,8 +1,9 @@
-= simple_form_for [:provide, @item], html: { class: 'form-horizontal', multipart: true } do |f|
+= simple_form_for [@item], url: provide_item_path, method: :patch, html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = notification
 
-  = f.input :add_stock_num, as: :integer
+  = f.input :add_stock_num, as: :integer, input_html: { value: (params[:item].nil? ? '' : params[:item][:add_stock_num]) }
+  = f.error :stock
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
