クーポンコードからポイントを追加できるようにした。

--- a/app/views/user_point_logs/index.html.haml
+++ b/app/views/user_point_logs/index.html.haml
@@ -9,16 +9,18 @@
   %tr
     %th= UserPointLog.human_attribute_name(:log_date)
     %th= UserPointLog.human_attribute_name(:kind)
-    %th= UserPointLog.human_attribute_name(:change_point)
     %th= UserPointLog.human_attribute_name(:before_point)
+    %th= UserPointLog.human_attribute_name(:change_point)
+    %th= User.human_attribute_name(:point)
     %th= UserPointLog.human_attribute_name(:description)
 
   - @user_point_logs.each do |user_point_log|
     %tr
       %td= l user_point_log.log_date, format: :long
       %td= user_point_log.kind.text
-      %td= number_to_human(user_point_log.change_point, units: 'number.human.point_units.units')
       %td= number_to_human(user_point_log.before_point, units: 'number.human.point_units.units')
+      %td= number_to_human(user_point_log.change_point, units: 'number.human.point_units.units')
+      %td= number_to_human(user_point_log.before_point + user_point_log.change_point, units: 'number.human.point_units.units')
       %td= simple_format(user_point_log.description)
 
 = paginate @user_point_logs
