--- a/app/views/users/_destination_form.html.haml
+++ b/app/views/users/_destination_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @user, url: users_distination_path, html: { class: 'form-horizontal' } do |f|
+= simple_form_for @user, url: user_destination_path, html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = notification
 
