--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,9 @@
                 %div
                   = link_to t('user_actions.change_registation'), edit_user_registration_path
                 %div
-                  = link_to t('user_actions.change_destination'), edit_users_distination_path
+                  = link_to t('user_actions.change_destination'), edit_user_destination_path
+                %div
+                  = link_to t('user_actions.user_point'), find_coupons_path
                 %div
                   = link_to t('user_actions.user_point_log'), user_point_logs_path
                 %div
