--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -2,6 +2,7 @@
   - if notification = f.error_notification
     = notification
 
+  = f.error :order_items
   = f.input :destination_name
   = f.input :destination_zip_code
   = f.input :destination_address
