--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -19,7 +19,7 @@
       %td= number_to_currency(cart_item.subtotal)
   %tr.success
     %th{ colspan: 4 }= t('helpers.currency.total')
-    %td{ colspan: 3 }= number_to_currency(@cart.cart_items.sum(&:subtotal))
+    %td{ colspan: 3 }= number_to_currency(@cart.cart_items.to_a.sum(&:subtotal))
   %tr.info
     %th{ colspan: 4 }= Order.human_attribute_name(:fee)
     %td{ colspan: 3 }= number_to_currency(@order.calc_fee(@cart))
